[package]
name = "rand_fruits"
version = "0.1.1"
authors = ["arnab"]
edition = "2021"
description = "A library to generate rabdom fruits"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3 
